--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,13 +1,17 @@
-name: Frontend CI
+name: Frontend CI/CD
 on:
   push:
     paths:
       - 'frontend/**'
     branches:
       - main
+      - dev
+      - stg
 
 jobs:
-  build_and_deploy:
+  # 本番環境
+  deploy-prod:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -17,6 +21,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
       - run: npm ci
       - run: npm run build
         env:
@@ -26,5 +32,57 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BRAIN_TEST_APP_A10FA }}'
           channelId: live
-          projectId: branubrain-fs   
-          siteId: branubrain-fs-dev
+          projectId: branubrain-fs
+          target: prod
+
+  # ステージング環境
+  deploy-stg:
+    if: github.ref == 'refs/heads/stg'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
+      - run: npm ci
+      - run: npm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.STAGING_API_URL }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BRAIN_TEST_APP_A10FA }}'
+          channelId: live
+          projectId: branubrain-fs
+          target: stg
+
+  # 開発環境
+  deploy-dev:
+    if: github.ref == 'refs/heads/dev'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
+      - run: npm ci
+      - run: npm run build
+        env:
+          VITE_API_BASE_URL: ${{ secrets.DEVELOPMENT_API_URL }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BRAIN_TEST_APP_A10FA }}'
+          channelId: live
+          projectId: branubrain-fs
+          target: dev
