--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -78,7 +78,7 @@ jobs:
       - run: npm ci
       - run: npm run build
         env:
-          VITE_BACKEND_API_URL: ${{ secrets.VITE_BACKEND_DEVELOPMENT_API_URL }}
+          VITE_BACKEND_API_URL: 'https://branubrain-fs-dev-115966255603.asia-northeast1.run.app'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
