--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -9,10 +9,10 @@ on:
       - stg  
       - dev
     types:
-      - opened      # PRが作成された時
-      - synchronize # PRが更新された時
-      - reopened    # PRが再オープンされた時
-      - closed      # PRがクローズされた時
+      - opened
+      - synchronize
+      - reopened
+      - closed
 
 env:
   PROJECT_ID: branubrain-fs
@@ -20,16 +20,13 @@ env:
   TF_VERSION: "1.6.0"
 
 jobs:
-  # PRでのプランチェック（マージ前）
-  terraform-plan-check:
-    if: github.event.action != 'closed'
+  # dev環境へのPRの場合のプランチェック
+  terraform-plan-dev:
+    if: github.event.action != 'closed' && github.base_ref == 'dev'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        environment: [dev, stg, prod]
     defaults:
       run:
-        working-directory: ./infrastructure/environments/${{ matrix.environment }}
+        working-directory: ./infrastructure/environments/dev
     
     permissions:
       contents: read
@@ -65,16 +62,9 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: |
-          ENV_NAME=${{ matrix.environment }}
-          case $ENV_NAME in
-            "dev") ENV_FULL="development" ;;
-            "stg") ENV_FULL="staging" ;;
-            "prod") ENV_FULL="production" ;;
-          esac
-          
           terraform plan \
             -var="project_id=$PROJECT_ID" \
-            -var="environment=$ENV_FULL" \
+            -var="environment=development" \
             -var="region=$REGION" \
             -no-color
 
@@ -82,7 +72,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const output = `#### Terraform Plan for ${{ matrix.environment }} 📖
+            const output = `#### Terraform Plan for DEV Environment 🚀
             
             <details><summary>Show Plan</summary>
             
@@ -92,7 +82,149 @@ jobs:
             
             </details>
             
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`;
+            *Target: \`dev\` environment | Pusher: @${{ github.actor }}*`;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
+  # stg環境へのPRの場合のプランチェック
+  terraform-plan-stg:
+    if: github.event.action != 'closed' && github.base_ref == 'stg'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./infrastructure/environments/stg
+    
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        id: plan
+        run: |
+          terraform plan \
+            -var="project_id=$PROJECT_ID" \
+            -var="environment=staging" \
+            -var="region=$REGION" \
+            -no-color
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const output = `#### Terraform Plan for STG Environment 🎯
+            
+            <details><summary>Show Plan</summary>
+            
+            \`\`\`
+            ${{ steps.plan.outputs.stdout }}
+            \`\`\`
+            
+            </details>
+            
+            *Target: \`stg\` environment | Pusher: @${{ github.actor }}*`;
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
+  # prod環境へのPRの場合のプランチェック
+  terraform-plan-prod:
+    if: github.event.action != 'closed' && github.base_ref == 'main'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./infrastructure/environments/prod
+    
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        id: plan
+        run: |
+          terraform plan \
+            -var="project_id=$PROJECT_ID" \
+            -var="environment=production" \
+            -var="region=$REGION" \
+            -no-color
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const output = `#### Terraform Plan for PROD Environment 🔥
+            
+            <details><summary>Show Plan</summary>
+            
+            \`\`\`
+            ${{ steps.plan.outputs.stdout }}
+            \`\`\`
+            
+            </details>
+            
+            *Target: \`prod\` environment | Pusher: @${{ github.actor }}*`;
             
             github.rest.issues.createComment({
               issue_number: context.issue.number,
@@ -102,7 +234,7 @@ jobs:
             })
 
   # 実際のデプロイ（マージ後）
-  terraform-prod:
+  terraform-apply-prod:
     if: github.event.pull_request.merged == true && github.base_ref == 'main'
     runs-on: ubuntu-latest
     defaults:
@@ -140,7 +272,7 @@ jobs:
             -var="environment=production" \
             -var="region=$REGION"
 
-  terraform-stg:
+  terraform-apply-stg:
     if: github.event.pull_request.merged == true && github.base_ref == 'stg'
     runs-on: ubuntu-latest
     defaults:
@@ -178,7 +310,7 @@ jobs:
             -var="environment=staging" \
             -var="region=$REGION"
 
-  terraform-dev:
+  terraform-apply-dev:
     if: github.event.pull_request.merged == true && github.base_ref == 'dev'
     runs-on: ubuntu-latest
     defaults:
