--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,21 +1,13 @@
 name: Backend CI/CD
 
 on:
-  push:
-    paths:
-      - 'backend/**'
-    branches:
-      - dev 
-  
   pull_request:
+    types: [closed]
     paths:
       - 'backend/**'
     branches:
-      - main 
-      - stg  
+      - main
       - dev
-    types:
-      - closed
 
 env:
   PROJECT_ID: branubrain-fs
@@ -23,7 +15,7 @@ env:
 
 jobs:
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -51,19 +43,19 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_TAG=$REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-prod/backend-prod:$GITHUB_SHA
+          IMAGE_TAG=$REGION-docker.pkg.dev/$PROJECT_ID/prod/backend:$GITHUB_SHA
           
           docker build -t $IMAGE_TAG .
           
           docker push $IMAGE_TAG
           
-          docker tag $IMAGE_TAG $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-prod/backend-prod:latest
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-prod/backend-prod:latest
+          docker tag $IMAGE_TAG $REGION-docker.pkg.dev/$PROJECT_ID/prod/backend:latest
+          docker push $REGION-docker.pkg.dev/$PROJECT_ID/prod/backend:latest
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy branubrain-fs-prod \
-            --image $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-prod/backend-prod:$GITHUB_SHA \
+            --image $REGION-docker.pkg.dev/$PROJECT_ID/prod/backend:$GITHUB_SHA \
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
@@ -75,61 +67,8 @@ jobs:
             --set-env-vars "ENVIRONMENT=production" \
             --timeout 300
 
-  deploy-stg:
-    if: github.ref == 'refs/heads/stg'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-    
-    permissions:
-      contents: read
-      id-token: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-
-      - name: Configure Docker to use gcloud as a credential helper
-        run: |
-          gcloud auth configure-docker $REGION-docker.pkg.dev
-
-      - name: Build and push Docker image
-        run: |
-          IMAGE_TAG=$REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-stg/backend-stg:$GITHUB_SHA
-          
-          docker build -t $IMAGE_TAG .
-          
-          docker push $IMAGE_TAG
-          
-          docker tag $IMAGE_TAG $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-stg/backend-stg:latest
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-stg/backend-stg:latest
-
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy branubrain-fs-stg \
-            --image $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-stg/backend-stg:$GITHUB_SHA \
-            --platform managed \
-            --region $REGION \
-            --allow-unauthenticated \
-            --port 8000 \
-            --memory 1Gi \
-            --cpu 1 \
-            --min-instances 0 \
-            --max-instances 5 \
-            --set-env-vars "ENVIRONMENT=staging" \
-            --timeout 300
-
   deploy-dev:
-    if: github.ref == 'refs/heads/dev'
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'dev'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -157,19 +96,19 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_TAG=$REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-dev/backend-dev:$GITHUB_SHA
+          IMAGE_TAG=$REGION-docker.pkg.dev/$PROJECT_ID/dev/backend:$GITHUB_SHA
           
           docker build -t $IMAGE_TAG .
           
           docker push $IMAGE_TAG
           
-          docker tag $IMAGE_TAG $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-dev/backend-dev:latest
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-dev/backend-dev:latest
+          docker tag $IMAGE_TAG $REGION-docker.pkg.dev/$PROJECT_ID/dev/backend:latest
+          docker push $REGION-docker.pkg.dev/$PROJECT_ID/dev/backend:latest
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy branubrain-fs-dev \
-            --image $REGION-docker.pkg.dev/$PROJECT_ID/branubrain-fs-dev/backend-dev:$GITHUB_SHA \
+            --image $REGION-docker.pkg.dev/$PROJECT_ID/dev/backend:$GITHUB_SHA \
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
